<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEAEA"
    tools:context="com.error_found.pk.sample.NewDesigns.SellYourStuffActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/proxima_nova_bold"
                android:text="@string/sell_your_stuff"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Menu"
                android:textColor="@android:color/white"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/hamburger_menu"
                android:tint="@android:color/white"/>
        </android.support.v7.widget.Toolbar>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:fontFamily="@font/proxima_novacond_semibold"
            android:text="@string/what_are_you_selling"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/four_dp"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:fontFamily="@font/proxima_nova_regular"
            android:gravity="center"
            android:text="@string/this_is_your_featured_photo_make_sure_it_s_a_good_one"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen_dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/sixteen_dp"
                android:layout_toStartOf="@+id/space1"
                android:background="@drawable/green_roundedbg"
                android:drawableTop="@drawable/ic_fromgallery"
                android:fontFamily="@font/proxima_nova_regular"
                android:gravity="center"
                android:text="@string/upload_from_gallery"/>

            <android.support.v4.widget.Space
                android:id="@+id/space1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/sixteen_dp"
                android:layout_toEndOf="@+id/space1"
                android:background="@drawable/white_roundedbg"
                android:drawablePadding="12dp"
                android:drawableTop="@drawable/ic_camerapdocut"
                android:fontFamily="@font/proxima_nova_regular"
                android:gravity="center"
                android:text="@string/take_a_photo"/>

            <TextView
                android:fontFamily="@font/proxima_nova_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/ringbg"
                android:padding="12dp"
                android:text="@string/or"
                android:textColor="@android:color/white"/>
        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_sellyourstuff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/sixteen_dp"
            android:layout_marginStart="@dimen/sixteen_dp"
            android:layout_marginTop="@dimen/sixteen_dp">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/thirt_twodp"
            android:fontFamily="@font/proxima_novacond_semibold"
            android:text="@string/details_of_the_ad"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/four_dp"
            android:fontFamily="@font/proxima_nova_regular"
            android:text="@string/your_title_should_be_attractive"/>


        <android.support.v7.widget.CardView
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            style="@style/CardViewForEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentPaddingBottom="@dimen/eight_dp"
            app:contentPaddingTop="@dimen/eight_dp">

            <EditText
                style="@style/WhiteBGEditTextDisabledText"
                android:hint="Ad Title"
                />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/CardViewForEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentPaddingBottom="@dimen/eight_dp"
            app:contentPaddingTop="@dimen/eight_dp">

            <EditText
                style="@style/WhiteBGEditTextDisabledText"
                android:hint="Ad Description"
                android:lines="3"
                />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/CardViewForEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentPaddingBottom="@dimen/four_dp"
            app:contentPaddingTop="@dimen/four_dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_cornered_bg"
                android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                android:fontFamily="@font/proxima_nova_regular"
                android:padding="@dimen/eight_dp"
                android:text="@string/category"
                android:textColor="@color/textColorPrimary"/>

        </android.support.v7.widget.CardView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/thirt_twodp"
            android:fontFamily="@font/proxima_novacond_semibold"
            android:text="@string/price_of_the_item"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginTop="@dimen/four_dp"
            android:fontFamily="@font/proxima_nova_regular"
            android:text="@string/your_price_should_be_negotiable"/>

        <android.support.v7.widget.CardView
            style="@style/CardViewForEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/price"
                    android:padding="@dimen/sixteen_dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:background="@color/colorPrimary"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:gravity="center"
                    android:padding="@dimen/eight_dp"
                    android:text="@string/naira"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/sixteen_dp"
            android:background="@drawable/green_cornerbg"
            android:fontFamily="@font/proxima_nova_bold"
            android:text="@string/post"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    </LinearLayout>

</ScrollView>
