<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.error_found.pk.sample.NewDesigns.ContactUsActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_contactus"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">
        <ImageView
            android:tint="@android:color/white"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:fontFamily="@font/proxima_nova_bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
            android:layout_marginStart="@dimen/thirt_twodp"
            android:textColor="@android:color/white"
            android:text="@string/Contact_us"
            android:layout_marginEnd="@dimen/thirt_twodp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </android.support.v7.widget.Toolbar>
    <TextView
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_gravity="center"
        android:text="@string/follow_us"
        android:fontFamily="@font/proxima_novacond_semibold"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:fontFamily="@font/proxima_nova_regular"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_gravity="center"
        android:text="@string/and_get_the_updates_and_never_miss_a_deal"
        android:layout_marginTop="@dimen/four_dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="@dimen/eight_dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <ImageView
            android:background="@drawable/square_with_twosides"
            android:src="@drawable/ic_googlepluscontact"
            android:layout_weight="1"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"/>
        <ImageView
            android:background="@drawable/square_drwable"
            android:src="@drawable/ic_facebookcontact"
            android:layout_weight="1"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"/>
        <ImageView
            android:background="@drawable/square_with_twosides"
            android:src="@drawable/ic_twittercontact"
            android:layout_weight="1"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <TextView
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_gravity="center"
        android:text="@string/say_hello"
        android:fontFamily="@font/proxima_novacond_semibold"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_gravity="center"
        android:fontFamily="@font/proxima_nova_regular"
        android:text="@string/loren_ipsum_dummy"
        android:layout_marginTop="@dimen/four_dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
   <android.support.design.widget.TextInputLayout
       android:layout_marginStart="@dimen/sixteen_dp"
       android:layout_marginEnd="@dimen/sixteen_dp"
       android:layout_marginTop="@dimen/sixteen_dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <EditText
           android:fontFamily="@font/proxima_nova_regular"
           android:hint="@string/email"
           android:layout_width="match_parent"
           android:layout_height="match_parent"/>
   </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_marginStart="@dimen/sixteen_dp"
            android:layout_marginEnd="@dimen/sixteen_dp"
            android:layout_marginTop="@dimen/four_dp"
            android:gravity="center_vertical"
            android:id="@+id/tv_subject"
            android:fontFamily="@font/proxima_nova_regular"
            android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
            android:hint="@string/subject"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="48dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="@dimen/four_dp"
        android:layout_marginStart="@dimen/sixteen_dp"
        android:layout_marginEnd="@dimen/sixteen_dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:fontFamily="@font/proxima_nova_regular"
            android:gravity="top"
            android:lines="2"
            android:hint="@string/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:textColor="@android:color/white"
        android:layout_marginStart="@dimen/sixteen_dp"
        android:layout_marginEnd="@dimen/sixteen_dp"
        android:fontFamily="@font/proxima_nova_regular"
        android:layout_marginTop="@dimen/eight_dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.Button"
        android:background="@color/colorPrimary"
        android:text="@string/send"
        android:id="@+id/btn_sell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
